name:                numberlink-site
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/numberlink-site#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable numberlink-site
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , warp
                     , wai
                     , http-types
                     , filepath
                     , bytestring
                     , blaze-builder
                     , directory

executable numberlink-editor
  hs-source-dirs:      fay
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       cpphs
                     , fay
                     , fay-base
                     , fay-text
                     , fay-jquery

